Added some items for completion

--- a/to-do.yaml
+++ b/to-do.yaml
@@ -24,6 +24,8 @@ daily:
   - _________________________________
   - _________________________________
   - Are these questions complete and helpful?
+  - Does inside trash need to be taken out?
+
 
 monday:
   - do I need to bill anyone?
@@ -32,6 +34,9 @@ tuesday:
 
 wednesday:
   - Did I fill the bunny's water?
+  - Large trash emptied.
+  - Did I pick up dog poop?
+
 thursday:
 
 friday:
@@ -42,3 +47,4 @@ sunday:
   - Did I fill the dog water?
   - Did I fill the bunny's water?
   - Did I pick up dog poop?
+  - Large trash emptied.
